[package]
name = "rust-wasm-chip8"
version = "0.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
ux = "0.1.3"
# "sync" for wasm according to https://github.com/tokio-rs/tokio/issues/1597#issuecomment-722419609
tokio = { version = "0.2.25", features = ["sync", "time", "macros"] }
futures = "0.3"
# dependency for rand, we want to add features for wasm ("js")
getrandom = { version = "0.2.6", features = ["js", "std"]}
rand = "0.8.4"
anyhow = "1.0"
mockall = "0.10.1"
web-sys = { vesion = "0.3.57", features = ["console", "CanvasRenderingContext2d", "Document", "Element", "HtmlCanvasElement", "Window"]}
callback-future = "0.1"
wasm-bindgen = "0.2.80"
wasm-bindgen-futures = "0.4.30"
state = { version = "0.5.3", features = ["tls"] }
rand_chacha = "0.3.1"
fluvio-wasm-timer = "0.2.5"
wasm_mutex = "0.1.1"
lazy_static = "1.4.0"
